--- a/css/processing_orders.css
+++ b/css/processing_orders.css
@@ -17,14 +17,14 @@
     width: 10%;
     height: 5px;
     border-radius: 5px;
-    background-color: #F23058;
+    background-color: var(--primary);
 }
 .line-second>li {
     z-index: 2;
     background-color: #DADADA;
 }
 .line-second>li:nth-child(-n+2) {
-    background-color: #F23058;
+    background-color: var(--primary);
 }
 
 .line-second {
@@ -41,5 +41,5 @@
     width: 50%;
     height: 5px;
     border-radius: 5px;
-    background-color: #F23058;
+    background-color: var(--primary);
 }
