--- a/css/products.css
+++ b/css/products.css
@@ -77,6 +77,27 @@
     max-width: 100%;
 }
 
+.product__about {
+    background: radial-gradient(
+            72.99% 73.93% at 28.82% 27.35%,
+            rgba(255, 255, 255, 0) 0%,
+            #ffffff 100%
+        )
+        /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */;
+    border-radius: 6px;
+}
+.breadcrumb-item::before{
+    content: "none";
+    display: none;
+}
+.breadcrumb-item i{
+    color: var(--primary);
+    font-size: 14px;
+}
+.breadcrumb-item.active, .breadcrumb-item{
+    color: var(--black);
+    font-weight: 700;
+}
 .product_thumb_slide .splide__slide img {
     width: 100%;
     height: auto;
@@ -91,8 +112,14 @@
     height: auto;
 }
 .product_compare_btn {
+    font-size: 16px;
+    height: 46.5px;
+    display: flex;
+    align-items: center;
     margin-right: 6px;
     --bs-btn-border-width: 2.3px;
+    padding-left: 24px;
+    padding-right: 24px;
 }
 .product_checkout_btn {
     display: flex;
@@ -101,25 +128,33 @@
 }
 .product_checkout_box {
     --bs-btn-hover-color: #fff;
-    --bs-btn-hover-bg: #f23058;
-    --bs-btn-hover-border-color: #f23058;
+    --bs-btn-hover-bg: var(--primary);
+    --bs-btn-hover-border-color: var(--primary);
     --bs-btn-active-color: #fff;
-    --bs-btn-active-bg: #f23058;
-    --bs-btn-active-border-color: #f23058;
+    --bs-btn-active-bg: var(--primary);
+    --bs-btn-active-border-color: var(--primary);
+}
+.product_checkout_box i{
+    color: var(--primary);
+    transition: .2s;
+}
+.product_checkout_box:hover i{
+    color: #fff;
 }
 .product_about_header {
     gap: 10px;
     margin-bottom: 20px;
     flex-wrap: wrap;
     top: -1px;
+    padding-top: 25px;
 }
-.product_about_header.active{
+.product_about_header.active {
     background-color: rgba(255, 255, 255, 0.75);
-    transition: .3s;
+    transition: 0.3s;
     padding: 15px;
     backdrop-filter: blur(10px);
 }
-.product_about_header.active .shipping__costs__alert{
+.product_about_header.active .shipping__costs__alert {
     display: none;
 }
 .product_about_title {
@@ -155,8 +190,8 @@
     position: absolute;
     top: 60px;
     right: 0;
-    width: 127px;
-    height: 48px;
+    width: 140px;
+    height: 52px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -165,13 +200,13 @@
     border-radius: 6px;
     font-family: "Open Sans";
     font-weight: 400;
-    font-size: 8px;
-    line-height: 11px;
-    padding-left: 12px;
+    font-size: 10px;
+    line-height: 12px;
+    padding: 0 10px;
 }
 .shipping__costs__alert i {
     font-size: 16px;
-    margin-right: 12px;
+    margin-right: 8px;
     color: rgba(41, 45, 51, 0.6);
 }
 .product_details_text {
@@ -261,10 +296,15 @@
     font-weight: 400;
     color: var(--primary);
 }
-.product_thumb_slide .splide__slide.is-active{
+.product_thumb_slide .splide__slide.is-active {
     border: none !important;
 }
 
+@media (max-width: 1400px) {
+    .shipping__costs__alert{
+        right: -15px;
+    }
+}
 @media (max-width: 992px) {
     .products_content_item {
         flex-wrap: wrap;
@@ -272,7 +312,7 @@
     .products_content_card {
         max-width: 100%;
     }
-    .product_about_header.active .product_about_title{
+    .product_about_header.active .product_about_title {
         font-size: 18px;
     }
 }
@@ -286,15 +326,16 @@
     .products_content_card {
         padding: 15px 12px;
     }
-    .product_compare_btn, .product_checkout_box{
+    .product_compare_btn,
+    .product_checkout_box {
         height: 44px;
         font-size: 16px;
     }
-    .product_checkout_box .btn__square{
+    .product_checkout_box .btn__square {
         height: 40px;
         width: 40px;
     }
-    .shipping__costs__alert{
+    .shipping__costs__alert {
         right: -30px;
     }
 }
@@ -308,7 +349,7 @@
     .fido_card_text span {
         max-width: 100%;
     }
-    .product_about_header.active{
+    .product_about_header.active {
         width: calc(100% + 24px);
         margin-left: -12px;
     }
