--- a/css/about.css
+++ b/css/about.css
@@ -1,5 +1,5 @@
 @import url("./splide.min.css");
-.header-bg{
+.header-bg {
     height: 100%;
     max-height: 736px;
 }
@@ -7,9 +7,9 @@
     margin-top: 120px;
     position: relative;
 }
-.about::before{
+.about::before {
     position: absolute;
-    content: '';
+    content: "";
     top: 0;
     left: 0;
     width: 100%;
@@ -50,7 +50,7 @@
 .about__box:nth-child(4) {
     clip-path: polygon(50% 89%, 100% 90%, 100% 0, 0 0, 0 90%);
 }
-.about__box:first-child::before {
+.about__box:first-child::before, .about__box:last-child::before {
     position: absolute;
     content: "";
     width: 41px;
@@ -58,8 +58,9 @@
     top: 47px;
     left: -14px;
     background: #fff;
-    z-index: -1;
+    z-index: 1;
     pointer-events: none;
+    border-radius: 50%;
 }
 .about_box_header {
     margin-bottom: 12px;
@@ -261,10 +262,10 @@
     .about__boxes {
         grid-template-columns: 1fr;
     }
-    .about__box{
+    .about__box {
         max-width: 100%;
     }
-    .about__stats{
+    .about__stats {
         padding: 50px 15px;
     }
     .about__box:first-child {
@@ -284,23 +285,23 @@
     }
 }
 @media (max-width: 480px) {
-    .about__stats{
+    .about__stats {
         gap: 20px 30px;
     }
-    .about{
+    .about {
         margin-top: 30px;
     }
-    .about_stats_title{
+    .about_stats_title {
         font-size: 36px;
         margin-bottom: 0;
         line-height: 60px;
     }
 }
 @media (max-width: 425px) {
-    .special__box{
+    .special__box {
         padding: 15px;
     }
-    .special__boxes{
+    .special__boxes {
         gap: 20px;
     }
 }
