--- a/css/products.css
+++ b/css/products.css
@@ -79,22 +79,22 @@
 
 .product__about {
     background: radial-gradient(
-            72.99% 73.93% at 28.82% 27.35%,
-            rgba(255, 255, 255, 0) 0%,
-            #ffffff 100%
-        )
-        /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */;
+        72.99% 73.93% at 28.82% 27.35%,
+        rgba(255, 255, 255, 0) 0%,
+        #ffffff 100%
+    );
     border-radius: 6px;
 }
-.breadcrumb-item::before{
+.breadcrumb-item::before {
     content: "none";
     display: none;
 }
-.breadcrumb-item i{
+.breadcrumb-item i {
     color: var(--primary);
     font-size: 14px;
 }
-.breadcrumb-item.active, .breadcrumb-item{
+.breadcrumb-item.active,
+.breadcrumb-item {
     color: var(--black);
     font-weight: 700;
 }
@@ -113,7 +113,7 @@
 }
 .product_compare_btn {
     font-size: 16px;
-    height: 46.5px;
+    height: 48px;
     display: flex;
     align-items: center;
     margin-right: 6px;
@@ -134,11 +134,11 @@
     --bs-btn-active-bg: var(--primary);
     --bs-btn-active-border-color: var(--primary);
 }
-.product_checkout_box i{
+.product_checkout_box i {
     color: var(--primary);
-    transition: .2s;
+    transition: 0.2s;
 }
-.product_checkout_box:hover i{
+.product_checkout_box .btn__square:hover i {
     color: #fff;
 }
 .product_about_header {
@@ -218,6 +218,29 @@
     margin: 16px 0;
 }
 
+.product__info .product_tab_nav {
+    --bs-nav-tabs-border-width: 0;
+}
+.product_tab_btn {
+    font-family: "Manrope";
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 24px;
+    color: rgba(41, 45, 51, 0.5);
+    --bs-nav-link-hover-color: rgba(41, 45, 51, 0.5);
+    text-decoration: underline;
+    background-color: transparent !important;
+    padding-left: 5px;
+    margin-right: 10px;
+    transition: 0.2s;
+}
+.product_tab_btn.active {
+    color: var(--black);
+    text-decoration: none;
+}
+.product__table {
+    border-color: rgba(41, 45, 51, 0.05);
+}
 .product_table_th,
 .product_table_tr {
     font-family: "Open Sans";
@@ -225,7 +248,14 @@
     font-size: 12px;
     line-height: 20px;
     color: var(--grey);
-    padding: 2px !important;
+}
+.product__table th,
+.product__table td {
+    padding: 3px !important;
+}
+.product__table tr td:first-child {
+    width: 1%;
+    padding-right: 10px !important;
 }
 .product_table_th {
     font-weight: 600;
@@ -235,6 +265,25 @@
     color: #006811;
     font-size: 10px;
 }
+.product__table td i {
+    color: var(--grey);
+    font-size: 14px;
+}
+.table_writeus_btn {
+    --bs-btn-color: #fff;
+    --bs-btn-bg: var(--primary);
+    --bs-btn-hover-color: #fff;
+    --bs-btn-hover-bg: var(--primary);
+    --bs-btn-hover-border-color: var(--primary);
+    --bs-btn-active-color: #fff;
+    --bs-btn-active-bg: var(--primary);
+    --bs-btn-active-border-color: var(--primary);
+    --bs-btn-padding-y: 0.25rem;
+    font-family: "Manrope";
+    font-weight: 800;
+    font-size: 14px;
+}
+
 .product_info_alert {
     display: flex;
     align-items: center;
@@ -243,8 +292,8 @@
 .product_info_alert p {
     font-family: "Open Sans";
     font-weight: 400;
-    font-size: 10px;
-    line-height: 11px;
+    font-size: 12px;
+    line-height: 14px;
     color: #bd5454;
     margin-left: 12px;
 }
@@ -288,8 +337,8 @@
 .guide_item_text {
     font-family: "Open Sans";
     font-weight: 700;
-    font-size: 10px;
-    line-height: 11px;
+    font-size: 12px;
+    line-height: 15px;
     color: var(--black);
 }
 .guide_item_text {
@@ -301,7 +350,7 @@
 }
 
 @media (max-width: 1400px) {
-    .shipping__costs__alert{
+    .shipping__costs__alert {
         right: -15px;
     }
 }
@@ -315,13 +364,16 @@
     .product_about_header.active .product_about_title {
         font-size: 18px;
     }
+    .breadcrumb-item,
+    .breadcrumb-item a,
+    .breadcrumb-item.active {
+        font-size: 16px !important;
+        font-weight: 400;
+    }
 }
 @media (max-width: 768px) {
     .products__cards {
         justify-content: center;
-    }
-    .products_content_header_blog {
-        gap: 15px 50px;
     }
     .products_content_card {
         padding: 15px 12px;
@@ -341,7 +393,7 @@
 }
 @media (max-width: 425px) {
     .products_content_header_blog {
-        gap: 12px 30px;
+        gap: 12px 0;
     }
     .fido_card_text {
         margin-top: 10px;
