--- a/components/subscribe.css
+++ b/components/subscribe.css
@@ -51,7 +51,7 @@
     font-weight: 600;
     font-size: 14px;
     line-height: 24px;
-    color: var(--black);
+    color: var(--black) !important;
 }
 
 @media (max-width: 768px) {
