--- a/css/registry.css
+++ b/css/registry.css
@@ -1,6 +1,12 @@
 .form-control::placeholder {
     color: #fff;
 }
+.register_content_text {
+    font-family: "Open Sans";
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 33px;
+}
 
 .or {
     position: relative;
@@ -41,7 +47,7 @@
     }
 }
 @media (max-width: 576px) {
-    .reg_btn_item{
+    .reg_btn_item {
         width: 100% !important;
     }
 }
@@ -52,15 +58,4 @@
     border-radius: 10px;
     color: #87744f;
     filter: drop-shadow(0 0 0.1rem #87744f);
-}
-
-.bg-blog::after {
-    position: absolute;
-    bottom: -20px;
-    right: 45px;
-    background-color: #fffbe7;
-    content: "";
-    width: 50px;
-    height: 40px;
-    border-radius: 50%;
 }
