--- a/css/compare.css
+++ b/css/compare.css
@@ -1,16 +1,36 @@
 .compare {
     margin-bottom: 80px;
 }
+.compare__cards{
+    padding-left: 190px;
+}
+.compare__boxes {
+    position: relative;
+    overflow-x: auto;
+    display: flex;
+    flex-wrap: nowrap;
+    right: 0;
+    margin-left: 4px !important;
+    padding-left: 0;
+}
 .compare__card {
     background-color: #fff;
     border-right: 1px solid rgba(0, 0, 0, 0.1);
     display: flex;
     flex-direction: column;
+    width: 190px;
+    min-width: 190px;
+    height: 100%;
+}
+.compare__card.active {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 10;
 }
 .compare__card.active,
-.compare__card:first-child,
 .compare__card:last-child {
-    border-right: none
+    border-right: none;
 }
 .compare__card.active .compare_card_content {
     background-color: rgba(242, 48, 87, 0.04);
@@ -78,7 +98,7 @@
     position: static;
 }
 .compare_btn {
-    font-family: 'Manrope';
+    font-family: "Manrope";
     color: #fff !important;
     background-color: var(--primary) !important;
     font-weight: 500;
@@ -87,6 +107,28 @@
     align-items: center;
 }
 
+@media (max-width: 768px) {
+    .compare_selected_item {
+        display: none;
+    }
+    .compare__cards{
+        padding-left: 150px;
+    }
+    .compare__card {
+        width: 150px;
+        min-width: 150px;
+        padding: 0 !important;
+        border-radius: 4px;
+        border: none;
+        margin-left: 4px;
+    }
+    .compare__card.active, .compare__boxes .compare__card:first-child{
+        margin-left: 0;
+    }
+    .compare_card_content {
+        padding: 12px !important;
+    }
+}
 @media (max-width: 576px) {
     .compare {
         margin-bottom: 30px;
@@ -96,5 +138,23 @@
     }
     .compare_btn {
         text-align: center !important;
+    }
+    .compare_card_title{
+        font-size: 14px;
+    }
+    .compare_card_text{
+        font-size: 13px;
+    }
+    .compare_table_th{
+        font-size: 12px;
+    }
+    .compare__table td{
+        padding: 0;
+    }
+    .compare_card_check{
+        width: 22px;
+        height: 22px;
+        line-height: 22px;
+        font-size: 12px;
     }
 }
