--- a/css/compare.css
+++ b/css/compare.css
@@ -2,23 +2,20 @@
     margin-bottom: 80px;
 }
 .compare__cards{
-    padding-left: 190px;
+    padding-left: 220px;
 }
 .compare__boxes {
     position: relative;
-    overflow-x: auto;
-    display: flex;
-    flex-wrap: nowrap;
-    right: 0;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     margin-left: 4px !important;
-    padding-left: 0;
 }
 .compare__card {
     background-color: #fff;
     border-right: 1px solid rgba(0, 0, 0, 0.1);
     display: flex;
     flex-direction: column;
-    width: 190px;
+    max-width: 240px;
     min-width: 190px;
     height: 100%;
 }
@@ -107,6 +104,16 @@
     align-items: center;
 }
 
+@media (max-width: 1399px) {
+    .compare__cards{
+        padding-left: 190px;
+    }
+}
+@media (max-width: 1199px) {
+    .compare__boxes{
+        overflow-x: auto;
+    }
+}
 @media (max-width: 768px) {
     .compare_selected_item {
         display: none;
