--- a/css/tools.css
+++ b/css/tools.css
@@ -73,7 +73,7 @@
         left: 0;
         background: linear-gradient(
             90deg,
-            #f9f9f9 89.58%,
+            #fff 89.58%,
             rgba(249, 249, 249, 0) 100%
         );
         width: 160px;
