--- a/css/const.css
+++ b/css/const.css
@@ -112,7 +112,6 @@ button {
 .basket__modal .table {
     border-spacing: 0 3px;
     border-collapse: separate;
-    min-width: 640px;
 }
 .basket__modal .table th,
 .basket__modal .table td {
@@ -310,9 +309,6 @@ button {
     .products_content_header_text:nth-child(3) {
         margin-right: 30px;
     }
-    .basket__modal {
-        --bs-modal-width: 100%;
-    }
     .basket__modal .modal-dialog {
         margin-left: 15px;
         margin-right: 15px;
@@ -331,6 +327,35 @@ button {
         text-align: center;
         font-size: 11px;
         line-height: 13px;
+    }
+    .basket__modal .table {
+        font-size: 14px;
+    }
+    .checkout__table,
+    .basket__modal .table {
+        table-layout: fixed;
+    }
+    .checkout__table th:first-child,
+    .basket__modal .table th:first-child,
+    .basket__modal .table td:first-child {
+        width: 100%;
+    }
+    .checkout__table tr,
+    .basket__modal .table tr {
+        display: flex;
+        flex-wrap: wrap;
+        margin-bottom: 6px;
+        padding: 5px 2px 0;
+        border-radius: 6px;
+        background-color: #fff;
+    }
+    .basket__modal .table td,
+    .basket__modal .table th {
+        background-color: transparent;
+        padding: 8px 12px;
+    }
+    .basket__modal .table tr {
+        background-color: rgba(0, 0, 0, 0.03);
     }
 }
 @media (max-width: 575px) {
